<resources>
    <string name="app_name">Messenger</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="messenger">Messenger</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_or_register">Login or Register</string>
    <string name="welcome">Welcome</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="apply">Apply</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="change_your_password">Change your password</string>
    <string name="chat_list">Chat list</string>
    <string name="enter_message">Enter message</string>
    <string name="enter_username">Enter username</string>
    <string name="empty_chat_list">Add new chat using Plus button</string>
    <string name="empty_messages">Write your first message in the chat</string>
</resources>
