<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:fitsSystemWindows="true"
    tools:context=".activities.ChangePasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/change_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/old_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/text_bg"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/new_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/text_bg"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/old_password_et"
        app:layout_constraintStart_toStartOf="@+id/old_password_et"
        app:layout_constraintTop_toBottomOf="@+id/old_password_et" />

    <Button
        android:id="@+id/change_password_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="@+id/new_password_et"
        app:layout_constraintStart_toStartOf="@+id/new_password_et"
        app:layout_constraintTop_toBottomOf="@+id/new_password_et" />

    <ProgressBar
        android:id="@+id/change_password_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/change_password_bt"
        app:layout_constraintEnd_toEndOf="@+id/new_password_et"
        app:layout_constraintStart_toStartOf="@+id/new_password_et"
        app:layout_constraintTop_toBottomOf="@+id/old_password_et"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>